<?xml version="1.0" encoding="utf-8"?>
<!-- /<ul> -->
<!--   <li>Cours4DialogDemo</li> -->
<!--   <li>com.android2ee.licence.cours4.demo.dialogs</li> -->
<!--   <li>10 févr. 2012</li> -->
  
<!--   <li>======================================================</li> -->
 
<!--   <li>Projet : Mathias Seguy Project</li> -->
<!--   <li>Produit par MSE.</li> -->
 
<!--  / -->
<!--   <ul> -->
<!--   Android Tutorial, An <strong>Android2EE</strong>'s project.</br>  -->
<!--   Produced by <strong>Dr. Mathias SEGUY</strong>.</br> -->
<!--   Delivered by <strong>http://android2ee.com/</strong></br> -->
<!--    Belongs to <strong>Mathias Seguy</strong></br> -->
<!--  </br> -->
<!--   This code is free for any usage except training and can't be distribute.</br> -->
<!--   The distribution is reserved to the site <strong>http://android2ee.com</strong>.</br> -->
<!--   The intelectual property belongs to <strong>Mathias Seguy</strong>.</br> -->
<!--   <em>http://mathias-seguy.developpez.com/</em></br> </br> -->
  
<!--   </br> -->
<!--    Ce code est libre de toute utilisation mais n'est pas distribuable.</br> -->
<!--    Sa distribution est reservée au site <strong>http://android2ee.com</strong>.</br>  -->
<!--    Sa propriété intellectuelle appartient à <strong>Mathias Seguy</strong>.</br> -->
<!--    <em>http://mathias-seguy.developpez.com/</em></br> </br> -->
<!--   </br> -->
<!--  / -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/btnShowAlertDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowAlertDialog" />

    <Button
        android:id="@+id/btnShowAlertDialogWith"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowAlertDialogWith" />
    <Button
        android:id="@+id/btnShowAlertDialogWithCB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowAlertDialogWithCB" />

    <Button
        android:id="@+id/btnShowCustomAlertDialogTitleless"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowCustomAlertDialogTitleless" />

    <Button
        android:id="@+id/btnShowCustomAlertDialogWithTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowCustomAlertDialogWithTitle" />

    <Button
        android:id="@+id/btnShowProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowProgressBar" />
    <Button
        android:id="@+id/btnShowProgressBarIndeterminate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowProgressBarIndeterminate" />
    
    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowToast" />

</LinearLayout>